--- a/index.html
+++ b/index.html
@@ -103,8 +103,11 @@
       aria-labelledby="exampleModalCenterTitle"
       aria-hidden="true"
     >
-      <div class="modal-dialog modal-dialog-centered" role="document">
-        <div class="modal-content" style="width: 90% !important;">
+      <div
+        class="modal-dialog modal-dialog-centered tableModal"
+        role="document"
+      >
+        <div class="modal-content">
           <div class="modal-header">
             <h5 class="modal-title" id="exampleModalLongTitle">
               India's State Wise Records
