--- a/index.html
+++ b/index.html
@@ -42,14 +42,6 @@
 
     <header class="header">
       <div class="title">
-        <!-- <a
-          class="nav-a"
-          href="#"
-          data-toggle="modal"
-          data-target="#exampleModalCenter"
-          >Cases in India
-          <span id="totalIndia" class="badge badge-info"></span>
-        </a> -->
         <button
           type="button"
           id="indiaBtn"
@@ -58,6 +50,16 @@
           data-target="#exampleModalCenter"
         >
           India <span id="totalIndia" class="badge badge-light"></span>
+        </button>
+
+        <button
+          type="button"
+          id="gujaratBtn"
+          class="btn btn-info nav-a"
+          data-toggle="modal"
+          data-target="#GujaratModal"
+        >
+          Gujarat <span id="totalGujarat" class="badge badge-light"></span>
         </button>
       </div>
 
@@ -133,18 +135,6 @@
                       <th scope="col" class="stateCases">
                         Cases
                       </th>
-                      <!-- <th scope="col" class="stateActive">
-                        Active
-                      </th>
-                      <th scope="col" class="stateRecover">
-                        Recovered
-                      </th>
-                      <th scope="col" class="stateDeaths">
-                        Deaths
-                      </th>
-                      <th scope="col" class="stateToday">
-                        New Cases
-                      </th> -->
                     </tr>
                   </thead>
                 </table>
@@ -161,6 +151,65 @@
     </div>
 
     <!-- india state wise data ends -->
+
+    <!-- Gujarat district wise data starts  -->
+
+    <!-- Modal -->
+    <div
+      class="modal fade"
+      id="GujaratModal"
+      tabindex="-1"
+      role="dialog"
+      aria-labelledby="exampleModalCenterTitle"
+      aria-hidden="true"
+    >
+      <div
+        class="modal-dialog modal-dialog-centered tableModal"
+        role="document"
+      >
+        <div class="modal-content">
+          <div class="modal-header">
+            <h5 class="modal-title" id="exampleModalLongTitle">
+              Gujarat's District Wise Records
+            </h5>
+            <button
+              type="button"
+              class="close"
+              data-dismiss="modal"
+              aria-label="Close"
+            >
+              <span aria-hidden="true">&times;</span>
+            </button>
+          </div>
+          <div class="modal-body">
+            <div class="stateTableDiv">
+              <div class="stateTbl-header">
+                <table class="table table-striped" cellspacing="5" id="table-1">
+                  <thead>
+                    <tr class="table-data">
+                      <th scope="col" class="state">
+                        State
+                      </th>
+                      <th scope="col" class="stateCases">
+                        Cases
+                      </th>
+                    </tr>
+                  </thead>
+                </table>
+              </div>
+              <div class="tbl-content">
+                <table class="table table-striped" id="table-1">
+                  <tbody id="gujaratTableBody"></tbody>
+                </table>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+
+    <!-- Gujarat district wise data ends -->
+
     <!-- header ends -->
 
     <!-- boxes starts  -->
