india and gujarat button set to same size and last updated time set

--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
               ><i class="fa fa-github" aria-hidden="true"></i
             ></a>
           </li>
-          <li class="navigation-li  idLink">
+          <li class="navigation-li idLink">
             <a
               class="nav-a linkedin"
               href="https://www.linkedin.com/in/nisarg-patel-259003154/"
@@ -188,7 +188,7 @@
                   <thead>
                     <tr class="table-data">
                       <th scope="col" class="state">
-                        State
+                        District
                       </th>
                       <th scope="col" class="stateCases">
                         Cases
@@ -216,6 +216,7 @@
 
     <div class="row">
       <div class="col-lg-12 boxes totalDiv">
+        <span class="updated" id="updated"></span><br />
         total cases <br /><span id="totalCase" class="badge badge-info"></span>
       </div>
       <div class="col-lg-3 col-5 col-sm-5 boxes otherChilds">
